--- a/meta/src/index.css
+++ b/meta/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+  font-size: clamp(2rem, 1.636rem + 1.82vw, 3rem);
+}
+.paragraph-md {
+  font-size: clamp(0.875rem, 0.83rem + 0.23vw, 1rem);
+}
