--- a/meta/src/index.css
+++ b/meta/src/index.css
@@ -5,6 +5,12 @@
 h1 {
   font-size: clamp(2rem, 1.636rem + 1.82vw, 3rem);
 }
+h2 {
+  font-size: clamp(1.5rem, 1.182rem + 1.59vw, 2.375rem);
+}
+h3 {
+  font-size: clamp(1rem, 0.864rem + 0.68vw, 1.375rem);
+}
 .paragraph-md {
   font-size: clamp(0.875rem, 0.83rem + 0.23vw, 1rem);
 }
